# mtpfs

./: .gitignore  .mtpfs.c.swp  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  id3read.c  id3read.h  mtpfs.c  mtpfs.h
.deps/: mtpfs-id3read.Po  mtpfs-mp3file.Po  mtpfs-mtpfs.Po
